2010-05-20  Proxmox Support Team  <support@proxmox.com>

	* vzrestore (restore_openvz): new --force option to overwrite
	existing data (patch from gilles)

2009-10-22  Proxmox Support Team  <support@proxmox.com>

	* VZDump.pm (run_command): correctly detect rsync command (avoid
	backup to fail when files vanished before they could be
	transferred )

2009-10-19  Proxmox Support Team  <support@proxmox.com>

	* vzrestore (restore_openvz): correctly handle '$VEID' macro in
	config files (VE_ROOT, VE_PRIVATE).

	* OpenVZ.pm (read_global_vz_config): do not substitute $VEID

2009-10-13  Proxmox Support Team  <support@proxmox.com>

	* OpenVZ.pm (read_vz_list): use -x (don't cross filesystem
	boundaries) for rsync
	(archive): also use --one-file-system for tar

	* VZDump.pm (run_hook_script): support for new --script option

	* hook-script.pl: example hook script 

2009-10-12  Proxmox Support Team  <support@proxmox.com>

	* VZDump.pm (exec_backup_task): also remove old log files

2009-10-09  Proxmox Support Team  <support@proxmox.com>

	* VZDump.pm: encode backup time in backup filenames

2009-09-21  Proxmox Support Team  <support@proxmox.com>

	* VZDump.pm (storage_info): new --storage option for PVE 

2009-09-08  Proxmox Support Team  <support@proxmox.com>

	* Makefile (vmtar, sparsecp, qmrestore): moved the QemuServer
	related code to the qemu-server package.

2009-09-07  Proxmox Support Team  <support@proxmox.com>

	* Makefile (PACKAGE): increase version to 1.2-1

	* sparsecp.c: small utility to copy stdin to a file preserving
	holes (sparse copy).

2009-09-03  Proxmox Support Team  <support@proxmox.com>

	* vzrestore: split out restore code into new binary 

	* qmrestore: split out restore code into new binary 

2009-09-02  Proxmox Support Team  <support@proxmox.com>

	* OpenVZ.pm (prepare): delay loading config file to this stage.

	* OpenVZ.pm (lock_vm): set lock during backup

	* vzdump.spec.in (Requires): add perl-LockFile-Simple
		